Adicionado a configuração de variso ambientes de senvolvimento
